# hackscanner

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench_helper.rs  fts_bench.rs  ftw_bench.rs  walkdir_bench.rs
src/: bin.rs  classifier.rs  debug.rs  errors.rs  file_finder.rs  join.rs  lib.rs  matcher.rs  rating.rs  rule.rs  severity.rs  ui.rs
src/classifier/: classification.rs  content_classifier.rs  mod.rs  path_classifier.rs  violation.rs
src/classifier/content_classifier/: error.rs
src/dir_entry/: mod.rs  standalone.rs  validation_dir_entry.rs  walkdir.rs  walkdir_impl.rs
src/file_finder/: ftw.rs  ftw.rs.off  mod.rs  walkdir.rs
src/file_finder/fts/: bindings.rs  bindings_macos.rs  bindings_unknown_linux.rs  mod.rs
src/file_finder/ftw/: mod.rs
src/fs/: mod.rs
src/fs/constants/: constants_linux.rs  constants_macos.rs  constants_unix.rs  mod.rs
src/fs/file_type/: mod.rs  standalone_file_type.rs
src/rating/: mod.rs  summary.rs
src/rule/: builtin.rs  inline_rule.rs  mod.rs  pattern_rule.rs  raw_path.rs  raw_rule.rs  reader.rs  rule.rs  rule_path.rs  rule_trait.rs
src/rule/pattern_rule/: regex_cache.rs
src/rule/raw_rule/: mod.rs
tests/: file_finder_test.rs  fts_test.rs  ftw_test.rs  run_test.rs  test_helpers.rs  walkdir_test.rs
tests/resources/files/: bad-words.txt  dezmond.php  error_reporting.php  eval-in-file.php  multiple_violations.php  whitelist_me.php
tests/resources/files/somephp/: file.php
tests/resources/files/typo3/typo3conf/: bad.php
tests/resources/files/typo3/typo3temp/autoload/: autoload_allowed_file.php
tests/resources/files/typo3/typo3temp/autoload-tests/: autoload_allowed_file.php
tests/resources/files/typo3/typo3temp/autoload/autoload_subfolder/: bad_file.php
tests/resources/files/typo3/uploads/some_ext/: bad_file.php
tests/resources/files/typo3/uploads/tx_ext_with_php_in_name/: index.html
tests/resources/rules/: rules.json  rules.yaml
(+6 files in other folders)
