[package]
name = "hackscanner"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]

[lib]
name = "hackscanner_lib"
path = "src/lib.rs"

[[bin]]
name = "hackscanner"
path = "src/bin.rs"

[[bin]]
name = "hackscanner-debug"
path = "src/debug.rs"

[features]
backtrace = ["error-chain/backtrace"]
json = ["serde_json"]
yaml = ["serde_yaml"]
default = ["backtrace", "json", "yaml"]

[dependencies]
walkdir = "2"
regex = "0.2.6"
error-chain = { version = "0.11.0", default-features = false }
log = "^0.4.1"
simplelog = "^0.5.0"
clap = "2"
ansi_term = "^0.11.0"
term = "0.4.6"
libc = "0.2.0"
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"

serde_yaml = { version = "0.7", optional = true }
serde_json = { version = "1.0", optional = true }
