[package]
name = "hackscanner"
version = "0.3.2"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"

[lib]
name = "hackscanner_lib"
path = "src/lib.rs"

[[bin]]
name = "hackscanner"
path = "src/bin.rs"

[features]
backtrace = ["error-chain/backtrace"]
json = ["serde_json"]
yaml = ["serde_yaml"]
fts = []
default = ["backtrace", "json", "yaml"]

[dependencies]
walkdir = "^2.2.9"
regex = "^1.2.0"
error-chain = { version = "^0.12.1", default-features = false }
log = { version="^0.4.8", features = ["release_max_level_debug"] }
simplelog = "^0.6.0"
clap = "^2.33.0"
ansi_term = "^0.12.0"
term = "^0.6.0"
libc = "0.2.60"
lazy_static = "1.3.0"
serde = "1.0.98"
serde_derive = "1.0.98"

serde_yaml = { version = "0.8.9", optional = true }
serde_json = { version = "1.0.40", optional = true }
